--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -2,11 +2,9 @@ name: Unit tests
 
 on:
   push:
-    branches:
-    - master
+    branches: [main]
   pull_request:
-    branches:
-    - master
+    branches: [main]
 
 jobs:
   build:
