--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [build-system]
 requires = [
     "setuptools>=42",
+    "wheel",
     "pybind11>=2.10.0",
 ]
 build-backend = "setuptools.build_meta"
