--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -1,11 +1,17 @@
-name: Unit tests
+# CI Tests
+# These should only be run on main, because they access secrets
+
+name: CI Tests
+
+
 
 on:
+  workflow_dispatch:
   push:
     branches: [main]
+  # Remove following two triggers before merge
   pull_request:
     branches: [main]
-  workflow_dispatch:
 
 jobs:
   build:
@@ -28,8 +34,18 @@ jobs:
           pip install -e .[test]
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Test with pytest
+        env:
+          # Indicate that secrets should be available
+          EXPECT_SECRETS: 1
+          # Configure endpoints
+          AZUREAI_CHAT_ENDPOINT: ${{ secrets.AZUREAI_CHAT_ENDPOINT }}
+          AZUREAI_CHAT_KEY: ${{ secrets.AZUREAI_CHAT_KEY }}
+          AZUREAI_CHAT_MODEL: ${{ secrets.AZUREAI_CHAT_MODEL }}
+          AZUREAI_COMPLETION_ENDPOINT: ${{ secrets.AZUREAI_COMPLETION_ENDPOINT }}
+          AZUREAI_COMPLETION_KEY: ${{ secrets.AZUREAI_COMPLETION_KEY }}
+          AZUREAI_COMPLETION_MODEL: ${{ secrets.AZUREAI_COMPLETION_MODEL }}
         run: |
-          pytest --cov=guidance --cov-report=xml --cov-report=term-missing
+          pytest --cov=guidance --cov-report=xml --cov-report=term-missing ./tests/models/test_azureai_openai.py
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         with:
