--- a/.github/workflows/server_tests.yml
+++ b/.github/workflows/server_tests.yml
@@ -1,4 +1,4 @@
-name: Unit tests
+name: Server tests
 
 on:
   push:
@@ -8,11 +8,10 @@ on:
   workflow_dispatch:
 
 jobs:
-  unit-tests:
-
+  server-tests:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
     runs-on: ${{ matrix.os }}
@@ -29,10 +28,7 @@ jobs:
           pip install pytest
           pip install -e .[test]
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Run tests (except server)
+      - name: Run server tests
         run: |
-          pytest --cov=guidance --cov-report=xml --cov-report=term-missing -m "not server" ./tests/
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          pytest --cov=guidance --cov-report=xml --cov-report=term-missing -m server ./tests/
+
