--- a/.github/workflows/unit_tests_gpu.yml
+++ b/.github/workflows/unit_tests_gpu.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         os: [gpu-runner]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-        model: ["gpt2cpu", "phi2cpu"]
+        model: ["gpt2gpu", "phi2gpu"]
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -26,3 +26,13 @@ jobs:
       - name: Show GPUs
         run: |
           nvidia-smi
+      - name: Install dependencies
+        shell: bash
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
+          pip install -e .[test]
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Check GPU available
+        run: |
+          python -c "import torch; assert torch.cuda.is_available()"
