--- a/.github/workflows/unit_tests_gpu.yml
+++ b/.github/workflows/unit_tests_gpu.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         os: [gpu-runner]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-        model: ["gpt2gpu", "phi2gpu"]
+        model: ["gpt2gpu", "phi2gpu", "hfllama7bgpu"]
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -33,9 +33,10 @@ jobs:
           pip install pytest
           pip install -e .[test]
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Install accelerate
+      - name: Install GPU-specific requirements
         run: |
           pip install accelerate
+          CMAKE_ARGS="-DLLAMA_CUBLAS=on" pip install llama-cpp-python
       - name: Check GPU available
         run: |
           python -c "import torch; assert torch.cuda.is_available()"
