--- a/.github/workflows/unit_tests_gpu.yml
+++ b/.github/workflows/unit_tests_gpu.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  unit-tests:
+  unit-tests-gpu:
 
     strategy:
       matrix:
@@ -33,6 +33,10 @@ jobs:
           pip install pytest
           pip install -e .[test]
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: See versions
+        run: |
+          cmake --version
+          nvcc --version
       - name: Install GPU-specific requirements
         run: |
           pip install accelerate
