--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-        model: ["gpt2cpu", "phi2cpu", "hfllama7b"]
+        model: ["gpt2cpu", "phi2cpu", "hfllama7b". "mistraltransformers"]
 
     runs-on: ${{ matrix.os }}
     steps:
