--- a/.github/workflows/unit_tests_gpu.yml
+++ b/.github/workflows/unit_tests_gpu.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Ensure NVIDIA SDK available
         run: |
           sudo apt-get -y install cuda-toolkit
-          export $CUDAToolkit_ROOT="/usr/local/cuda-12.4/bin"
+          echo "/usr/local/cuda-12.4/bin" >> $GITHUB_PATH
       - name: GPU pip installs
         run: |
           pip install accelerate
