--- a/.github/workflows/unit_tests_gpu.yml
+++ b/.github/workflows/unit_tests_gpu.yml
@@ -39,6 +39,7 @@ jobs:
           echo "/usr/local/cuda-12.4/bin" >> $GITHUB_PATH
       - name: GPU pip installs
         run: |
+          pip install cmake
           pip install accelerate
           CMAKE_ARGS="-DLLAMA_CUBLAS=on" pip install llama-cpp-python
       - name: Check GPU available
