--- a/.github/workflows/unit_tests_gpu.yml
+++ b/.github/workflows/unit_tests_gpu.yml
@@ -39,8 +39,8 @@ jobs:
           echo "/usr/local/cuda-12.4/bin" >> $GITHUB_PATH
       - name: Update cmake
         run: |
-          sudo apt update
-          sudo apt upgrade cmake
+          sudo apt-get update
+          sudo apt-get -y upgrade cmake
       - name: GPU pip installs
         run: |
           pip install cmake
