--- a/.github/workflows/unit_tests_gpu.yml
+++ b/.github/workflows/unit_tests_gpu.yml
@@ -26,6 +26,17 @@ jobs:
       - name: Show GPUs
         run: |
           nvidia-smi
+      - name: Update Ubuntu
+        run: |
+          sudo apt-get update
+          sudo apt-get -y upgrade
+      - name: Ensure cmake available
+        run: |
+          sudo apt-get -y install cmake
+      - name: Ensure NVIDIA SDK available
+        run: |
+          sudo apt-get -y install cuda-toolkit
+          echo "/usr/local/cuda-12.4/bin" >> $GITHUB_PATH
       - name: Install dependencies
         shell: bash
         run: |
@@ -33,14 +44,6 @@ jobs:
           pip install pytest
           pip install -e .[test]
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Ensure NVIDIA SDK available
-        run: |
-          sudo apt-get -y install cuda-toolkit
-          echo "/usr/local/cuda-12.4/bin" >> $GITHUB_PATH
-      - name: Update cmake
-        run: |
-          sudo apt-get update
-          sudo apt-get -y upgrade cmake
       - name: GPU pip installs
         run: |
           pip install cmake
