--- a/.github/workflows/unit_tests_gpu.yml
+++ b/.github/workflows/unit_tests_gpu.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           # Seems to be a problem with latest PyPI cmake release
           # https://github.com/scikit-build/cmake-python-distributions/issues/472
-          pip install cmake<3.29
+          pip install "cmake<3.29"
           pip install accelerate
           CMAKE_ARGS="-DLLAMA_CUBLAS=on" pip install llama-cpp-python
       - name: Check GPU available
