--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -13,6 +13,9 @@ on:
     # * is a special character in YAML so we quote this string
     # Run at 1030 UTC every day
     - cron:  '30 10 * * *'
+  # REMOVE BEFORE MERGE!
+  pull_request:
+    branches: [main]
 
 jobs:
   build:
@@ -36,8 +39,6 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Test with pytest
         env:
-          # Indicate that secrets should be available
-          EXPECT_SECRETS: 1
           # Configure endpoints
           AZUREAI_CHAT_ENDPOINT: ${{ secrets.AZUREAI_CHAT_ENDPOINT }}
           AZUREAI_CHAT_KEY: ${{ secrets.AZUREAI_CHAT_KEY }}
@@ -46,7 +47,7 @@ jobs:
           AZUREAI_COMPLETION_KEY: ${{ secrets.AZUREAI_COMPLETION_KEY }}
           AZUREAI_COMPLETION_MODEL: ${{ secrets.AZUREAI_COMPLETION_MODEL }}
         run: |
-          pytest --cov=guidance --cov-report=xml --cov-report=term-missing ./tests/models/test_azureai_openai.py
+          pytest --cov=guidance --cov-report=xml --cov-report=term-missing -m needs_credentials ./tests/
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         with:
