--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install regular dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pytest
