Set up the structure of mypy installs, now to start typing things

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -34,6 +34,8 @@ jobs:
           pip install pytest
           pip install -e .[test]
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Test with mypy
+        run: mypy guidance
       - name: Test with pytest
         env:
           # Configure endpoints
