--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,10 @@ no_implicit_optional = false  # TODO: PEP484, set to true
 strict = false  # TODO: set to true
 
 [[tool.mypy.overrides]]
+module = "guidance.*"
+disable_error_code = "operator"  # "guidance" Module is not callable https://github.com/python/mypy/issues/9240
+
+[[tool.mypy.overrides]]
 module = "pyformlang.*"
 ignore_missing_imports = true
 
