Try CPU with low precision?

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -17,7 +17,7 @@ jobs:
         model:
           - "gpt2cpu"
           - "phi2cpu"
-          # - "transformers_mistral_7b" Memory issues?
+          - "transformers_mistral_7b"
           - "hfllama7b"
           - "hfllama_mistral_7b"
 
