--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -14,7 +14,7 @@ on:
     # Run at 1030 UTC every day
     - cron:  '30 10 * * *'
   # To be removed.....
-  pr:
+  pull_request:
     branches: [main]
 
 jobs:
