--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -43,9 +43,7 @@ jobs:
         run: |
           pytest --cov=guidance --cov-report=xml --cov-report=term-missing \
           --selected_model ${{ matrix.model }} \
-          -m "not server" \
-          -m "not needs_credentials" \
-          -m "not use_gpu" \
+          -m "not (needs_credentials or use_gpu or server)" \
           ./tests/
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
