--- a/.github/workflows/unit_tests_gpu.yml
+++ b/.github/workflows/unit_tests_gpu.yml
@@ -52,8 +52,7 @@ jobs:
         run: |
           pytest --cov=guidance --cov-report=xml --cov-report=term-missing \
             --selected_model ${{ matrix.model }} \
-            -m "not server" \
-            -m "not needs_credentials" \
+            -m "not (server or needs_credentials)" \
             ./tests/
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
