--- a/.github/workflows/unit_tests_gpu.yml
+++ b/.github/workflows/unit_tests_gpu.yml
@@ -50,7 +50,7 @@ jobs:
           python -c "import torch; assert torch.cuda.is_available()"
       - name: Run tests (except server)
         run: |
-          pytest -v --cov=guidance --cov-report=xml --cov-report=term-missing \
+          pytest --cov=guidance --cov-report=xml --cov-report=term-missing \
             --selected_model ${{ matrix.model }} \
             -m "not (server or needs_credentials)" \
             ./tests/
