[Test] More notebook tests (#745)
Trying to get more notebooks running in tests. This has resulted in a few changes to the notebooks, so that they don't rely on paths unique to particular people's machines.

Since the notebooks use a variety of models, and standard GitHub runners are not over-provisioned with disk space, some tests need to run on GPU nodes. Furthermore, some of the notebooks use both local and remote models, which has caused the CI runs to be switched to GPU runners.

Some of the notebooks are having to be skipped, due to errors which have not yet been fully debugged.

Also bump some of the GitHub Action versions to the latest available

--- a/.github/workflows/server_tests.yml
+++ b/.github/workflows/server_tests.yml
@@ -16,9 +16,9 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
@@ -29,6 +29,9 @@ jobs:
           pip install -e .[test]
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Run server tests
+        shell: bash
         run: |
-          pytest --cov=guidance --cov-report=xml --cov-report=term-missing -m server ./tests/
+          pytest --cov=guidance --cov-report=xml --cov-report=term-missing \
+          -m server \
+          ./tests/
 
