--- a/.github/workflows/unit_tests_gpu.yml
+++ b/.github/workflows/unit_tests_gpu.yml
@@ -1,11 +1,9 @@
 name: Unit tests GPU
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
   workflow_dispatch:
+  pull_request_review:
+    types: [submitted, edited]
 
 jobs:
   unit-tests:
@@ -15,7 +13,7 @@ jobs:
         os: [gpu-runner]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
         model: ["gpt2gpu", "phi2gpu", "hfllama_7b_gpu"]
-
+    if: github.event_name == 'workflow_dispatch' || github.event_name == 'pull_request_review' && github.event.review.state == 'APPROVED'
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
