First stab at minimal mypy implementation (#738)
Issue: https://github.com/guidance-ai/guidance/issues/729
https://github.com/guidance-ai/guidance/issues/257

- **Set up the structure of mypy installs, now to start typing things**
- **fixed guidance/library/_regex.py:13: SyntaxWarning: invalid escape
sequence '\['**
- **First stab at minimal mypy implementation**

This is a non-strict implementation of mypy, with cicd integrated.

After this is approved, we can either slowly move towards a strict
implementation, or each PR can simply
choose how much they want/need to contribute to the typing system to
help themselves understand the codebase.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,56 @@ target_version = ['py38', 'py39', 'py310', 'py311', 'py312']
 
 [tool.isort]
 profile = "black"
+
+[tool.mypy]
+no_implicit_optional = false  # TODO: PEP484, set to true
+strict = false  # TODO: set to true
+exclude = ["tests"]
+
+[[tool.mypy.overrides]]
+module = "guidance.*"
+disable_error_code = "operator"  # "guidance" Module is not callable https://github.com/python/mypy/issues/9240
+
+[[tool.mypy.overrides]]
+module = "pyformlang.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "pybind11.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "vertexai.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "google.generativeai.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "google.ai.generativelanguage.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "llama_cpp.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "anthropic.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "litellm.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "transformers.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "diskcache.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "tokenizers.*"
+ignore_missing_imports = true
