--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -8,6 +8,10 @@ on:
   workflow_dispatch:
   push:
     branches: [main]
+  schedule:
+    # * is a special character in YAML so we quote this string
+    # Run at 1030 UTC every day
+    - cron:  '30 10 * * *'
 
 jobs:
   build:
