Update tests, validate minimal install

--- a/.github/workflows/qa_tests.yml
+++ b/.github/workflows/qa_tests.yml
@@ -8,6 +8,25 @@ on:
   workflow_dispatch:
 
 jobs:
+  bare-install:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Minimal install
+        run: |
+          pip install -e .
+      - name: Attempt import
+        run: |
+          python -c "import guidance"
+
   mypy:
     runs-on: ubuntu-latest
     steps:
