--- a/.github/workflows/server_tests.yml
+++ b/.github/workflows/server_tests.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest
-          pip install -e .[test]
+          pip install -e .[schemas,test]
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Run server tests
         shell: bash
