--- a/.github/workflows/unit_tests_gpu.yml
+++ b/.github/workflows/unit_tests_gpu.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest
-          pip install -e .[test]
+          pip install -e .[schemas,test]
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: GPU pip installs
         run: |
